--- a/1_IOC容器/1.4_依赖/1.4.1_依赖注入/1.4.1_beans-factory-collaborators.md
+++ b/1_IOC容器/1.4_依赖/1.4.1_依赖注入/1.4.1_beans-factory-collaborators.md
@@ -1,4 +1,4 @@
-# 1.4.1 依赖注入
+# 1.4.1. 依赖注入
 
 Dependency injection (DI) is a process whereby objects define their dependencies (that is, the other objects with which they work) only through constructor arguments, arguments to a factory method, or properties that are set on the object instance after it is constructed or returned from a factory method. The container then injects those dependencies when it creates the bean. This process is fundamentally the inverse (hence the name, Inversion of Control) of the bean itself controlling the instantiation or location of its dependencies on its own by using direct construction of classes or the Service Locator pattern.
 
